# spandsp

./: Makefile  Makefile.in  config-h.in~  config.status  configure  g1050_simulation.pcap  gateway_fax_test.tif  libtool  log.txt  simple_fax_test.tif  spandsp.pc
apps/tone_detector/: Makefile  Makefile.am  Makefile.in  fax_tone_detector.c  fax_tone_generator.c  raw_v21_generator.c  simple_tone_detector.c  simple_v21_generator  simple_v21_generator.c  simple_v21_wav_generator  v21_analyzer.c
apps/tone_detector/.deps/: fax_tone_detector.Po  fax_tone_generator.Tpo
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: Makefile  Makefile.in  doxygen
example/: g1050_example  g1050_example.c  g1050_pcap_example  g1050_pcap_example.c
examples/: Makefile  gateway_fax_test  gateway_fax_test.c  log2.txt  simple_fax_test  simple_fax_test.c  simple_fax_test.tif
spandsp-sim/: Makefile  Makefile.in  g1050.lo  libspandsp-sim.la  line_model.lo  line_models.c  line_models.lo  make_line_models  rfc2198_sim.lo  test_utils.lo
src/: Makefile  Makefile.in  ademco_contactid.lo  adsi.lo  agc_float.lo  alloc.lo  async.lo  at_interpreter.lo  awgn.lo  bell_r2_mf.lo  bert.lo  bit_operations.lo  bitstream.lo  complex_filters.lo  complex_vector_float.lo  complex_vector_int.lo  config.h  crc.lo  data_modems.lo  dds_float.lo  dds_int.lo  dtmf.lo  fax.lo  fax_modems.lo  filters.csv  fsk.lo  g711.lo  g722.lo  g726.lo  godard.lo  gsm0610_decode.lo  gsm0610_encode.lo  gsm0610_long_term.lo  gsm0610_lpc.lo  gsm0610_preprocess.lo  gsm0610_rpe.lo  gsm0610_short_term.lo  (+82 more)
(+2321 files in other folders)
